2001-09-11 10:37 GMT Dave Pearson <davep@davep.org>
   * source/rtl/profiler.prg
     * Renamed classes from HB_* to HB*.
   * tests/testprof.prg
     * Updated the code to use the new class names.
	
2001-09-11 12:11 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/vm/classes.c
     ! Changed one (hopefully) last occurence of TClass to HBClass

   * make_b16.bat
     make_b32.bat 
     make_vc.bat
     makefile.bc
     makefile.vc 
     * Some cleanups.

   * doc/en/command.txt
     doc/en/harbext.txt 
     doc/en/objfunc.txt
     doc/en/tclass.txt 
     doc/es/command.txt
     ! Classname changes applied to docs.

2001-09-10 23:53 UTC+0100 Viktor Szakats <viktor.szakats@syenar.hu>

   * source/rtl/dummy.prg
     - Removed commented out functions.
     ! Added CRLF to EOF

   * source/vm/classes.c
     ! Small correction to CVS header.

   * contrib/libmisc/fileread.prg 
     contrib/odbc/todbc.prg
     include/hbclass.ch 
     include/hbextern.ch 
     samples/guestbk/inifiles.prg 
     samples/guestbk/testcgi.prg 
     source/debug/debugger.prg 
     source/debug/tbrwtext.prg 
     source/rtl/checkbox.prg
     source/rtl/dummy.prg 
     source/rtl/getlist.prg
     source/rtl/getsys.prg 
     source/rtl/listbox.prg
     source/rtl/memoedit.prg 
     source/rtl/pushbtn.prg
     source/rtl/radiobtn.prg 
     source/rtl/radiogrp.prg 
     source/rtl/scrollbr.prg
     source/rtl/strings.c
     source/rtl/tclass.prg
     source/rtl/teditor.prg 
     source/rtl/terror.prg
     source/rtl/tget.prg 
     source/rtl/tgetlist.prg
     source/rtl/tlabel.prg 
     source/rtl/tmenuitm.prg
     source/rtl/tobject.prg 
     source/rtl/tpopup.prg
     source/rtl/treport.prg 
     source/rtl/ttextlin.prg
     source/rtl/ttopbar.prg 
     tests/clasinit.prg
     tests/classes.prg 
     tests/clsdata.prg
     tests/debugtst.prg 
     tests/dynobj.prg
     tests/inherit.prg 
     tests/inifiles.prg
     tests/inline.prg 
     tests/objarr.prg
     tests/objasign.prg 